sumo/tests/dfrouter/errors/network/junction/root__junction#id__empty3/errors.dfrouter
Error: Missing id of a 'junction'-object.
Quitting (on error).
